--- a/dosiraktong/ssamlist.html
+++ b/dosiraktong/ssamlist.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 
 <body>
@@ -58,14 +59,36 @@
 
     <pre>
         1.폴더구조 및 등록
-        2.html 기본형 완료
-        3.css 기본형 완료
+
+        2.html 기본형 완료 
+         1)내용 영역별 주석을 무조건 기재
+         2)내용 영역별 Section 구조 잡기
+         <section class="클래스명"></section>
+        내용구분은 section태그를 쓰자!
+        header 는 header 태그쓰기 
+        footer 는 footer 태그쓰기.
+        div 는 레이아웃 용으로만 쓰자.
+
+
+        3.css 기본형 완료(layout.css /style.css /main.css/)
+
+            1)font 설정완료가 되어야 기본형 완료
+            2)css 에 글꼴 폴더로 관리
+            <!-- reset.css && normalize.css 는 html 초기화하는것-->
+            <!-- css 순서 지키기! 어떤것을 위에둘지 잘 파악하기-->
+
+
         4.js 기본형 완료 바닐라
         document.getElementById('gnb'); //바닐라
         $("#gnb"); //j-query
 
         j-query 를 바닐라로 옮기는 방법!?
             <!-- <html lang="ko"> en을 ko로 변경하기 -->
+    </pre>
+
+    <pre>
+        caniuse.com 
+        에서 어느 브라우저에서 상용가능한 태그인지 검색해볼수도있다.
     </pre>
 
 </body>
