--- a/dosiraktong/ssamlist.html
+++ b/dosiraktong/ssamlist.html
@@ -76,7 +76,7 @@
             2)css 에 글꼴 폴더로 관리
             <!-- reset.css && normalize.css 는 html 초기화하는것-->
             <!-- css 순서 지키기! 어떤것을 위에둘지 잘 파악하기-->
-
+            3)flex 강력추천 -> 그리드는 좀 에러가많음 -> 플로트 도 씀
 
         4.js 기본형 완료 바닐라
         document.getElementById('gnb'); //바닐라
