--- a/dosiraktong/index.html
+++ b/dosiraktong/index.html
@@ -49,23 +49,55 @@
     <!-- 메인 레이아웃 영역 시작 :용도=관례 -->
     <!-- 시작할때 약속 class="wrap" -->
     <div class="wrap">
+
         <!-- 상단 시작-->
-        <header class="header"></header>
+        <header class="header">
+            <div class="inner">
+                <!-- 로고는 무조건 a태그에 클래스 logo 주자 -->
+                <a href="index.html" class="logo">
+                    <!-- img 태그로 배치할 수 도 있다. -->
+                    <!-- css 에서 background로 넣을수도 있는데 백그라운드가 더 좋음 -->
+                </a>
+                <!-- caniuse.com 검색 -->
+                <!-- nav 로 메뉴바 감싸기 -->
+                <nav class="nav">
+                    <ul class="gnb">
+                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="#">제휴문의</a></li>
+                        <li><a href="#">도시락멤버스</a></li>
+                        <li><a href="#">와이파이도시락</a></li>
+                        <li><a href="#">도시락유심</a></li>
+                        <li><a href="#">도시락eSIM</a></li>
+                    </ul>
+
+                </nav>
+            </div>
+        </header>
         <!-- 상단 끝 -->
         <!-- 비주얼 시작-->
-        <section class="visual"></section>
+        <section class="visual">
+            <div class="inner"></div>
+        </section>
         <!-- 비주얼 끝-->
         <!-- 서비스 시작-->
-        <section class="service"></section>
+        <section class="service">
+            <div class="inner"></div>
+        </section>
         <!-- 서비스 끝 -->
         <!-- 정보 시작-->
-        <section class="info"></section>
+        <section class="info">
+            <div class="inner"></div>
+        </section>
         <!-- 정보 끝 -->
         <!-- 서비스 카테고리 시작 -->
-        <section class="category"></section>
+        <section class="category">
+            <div class="inner"></div>
+        </section>
         <!-- 서비스 카테고리 끝-->
         <!-- 하단 시작-->
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="inner"></div>
+        </footer>
         <!-- 하단 끝-->
 
     </div>
