--- a/dosiraktong/ssamlist.html
+++ b/dosiraktong/ssamlist.html
@@ -64,19 +64,22 @@
          1)내용 영역별 주석을 무조건 기재
          2)내용 영역별 Section 구조 잡기
          <section class="클래스명"></section>
-        내용구분은 section태그를 쓰자!
-        header 는 header 태그쓰기 
-        footer 는 footer 태그쓰기.
-        div 는 레이아웃 용으로만 쓰자.
-
+            내용구분은 section태그를 쓰자!
+            header 는 header 태그쓰기 
+            footer 는 footer 태그쓰기.
+            div 는 레이아웃 용으로만 쓰자.
+         3)그리드 맞추기 위해 div 안에 클래스inner 로 만들어줌 (contents ,layout 등등 이름써도됨)
 
         3.css 기본형 완료(layout.css /style.css /main.css/)
 
             1)font 설정완료가 되어야 기본형 완료
             2)css 에 글꼴 폴더로 관리
             <!-- reset.css && normalize.css 는 html 초기화하는것-->
-            <!-- css 순서 지키기! 어떤것을 위에둘지 잘 파악하기-->
-            3)flex 강력추천 -> 그리드는 좀 에러가많음 -> 플로트 도 씀
+            <!-- css 순서 지키기! 어떤것을 위에둘지 잘 파악하기 위보다 아래에 있는 CSS 가 먹힘!-->
+            3)html 태그 적용>html태그의 class 적용>html태그의 id 적용(젤 우선권이란 소리)
+            F12번 눌러서 CSS 흐름 추적하면서 업데이트하는게 제일 좋음
+            4)flex 강력추천 -> 그리드는 좀 에러가많음 -> 플로트 도 씀
+            5)클래스며 아이디며 CSS 순서는 반드시 HTML에 기재된 순서대로 사용하기!!!
 
         4.js 기본형 완료 바닐라
         document.getElementById('gnb'); //바닐라
