--- a/dosiraktong/ssamlist.html
+++ b/dosiraktong/ssamlist.html
@@ -43,6 +43,7 @@
         css
         js
         assets //에셋에 전화번호 연락처 등등 가능한 자료를 모두 모으기
+        ftp (filezilla)
 
 
     </pre>
@@ -62,8 +63,13 @@
 
         2.html 기본형 완료 
          1)내용 영역별 주석을 무조건 기재
+         <body>
+            <div class="wrap">소문자로!</div>
+         </body>
+
          2)내용 영역별 Section 구조 잡기
          <section class="클래스명"></section>
+
             내용구분은 section태그를 쓰자!
             header 는 header 태그쓰기 
             footer 는 footer 태그쓰기.
@@ -81,11 +87,18 @@
             4)flex 강력추천 -> 그리드는 좀 에러가많음 -> 플로트 도 씀
             5)클래스며 아이디며 CSS 순서는 반드시 HTML에 기재된 순서대로 사용하기!!!
 
+            6).mobile-bt 클래스 유심히 보기! 애니메이션 opacity / display:none의 차이점 깨닫기!
+
+            Swiper / Slick
+            
+            
         4.js 기본형 완료 바닐라
         document.getElementById('gnb'); //바닐라
         $("#gnb"); //j-query
 
         j-query 를 바닐라로 옮기는 방법!?
+        코드 비교 하는 방법??
+        FTP 서버??
             <!-- <html lang="ko"> en을 ko로 변경하기 -->
     </pre>
 
