--- a/dosiraktong/index.html
+++ b/dosiraktong/index.html
@@ -67,7 +67,7 @@
 
 <body>
     <!-- 위로가기 -->
-    <button class="gotop">위로가기</button>
+    <button class="gotop"><i class="xi-arrow-up"></i></button>
     <!-- 메인 레이아웃 영역 시작 :용도=관례 -->
     <!-- 시작할때 약속 class="wrap" -->
     <div class="wrap">
@@ -174,7 +174,7 @@
         <!-- 서비스 시작-->
         <section class="service">
             <div class="inner">
-                <h2><span>도시락통</span> 서비스 둘러보기</h2>
+                <h2><span class="color-blue">도시락통</span> 서비스 둘러보기</h2>
                 <div class="service-contents">
                     <div class="service-left">
                         <a href="#" class="service-link-1" data-aos="fade-right"></a>
@@ -191,8 +191,17 @@
         <section class="info">
             <div class="inner">
                 <div class="info-contents">
-                    <div class="info-left"></div>
-                    <div class="info-right"></div>
+                    <div class="info-left"><span class="font-size-big">통신 서비스를 하나로
+                    <br>
+                해외여행 갈 땐<span class="color-blue ">도시락통</span></span></div>
+                    <div class="info-right">
+                        <span class="font-size-mid"><h4>혼자서 갑자기 훌쩍 떠나는 여행도<br>오랜만에 온 가족이 함께하는 여행도<br><span class="color-blue ">도시락 하나면 든든</span>해요</h4></span>
+                        <br><p class="font-size-small">국내외 어디서나 끊김없이 든든한 네트워크 제공하자는 모토를 가지고 2004년,
+                            (주)와이드모바일은 설립되었습니다.
+                            <br>
+                            더 나은 서비스 제공을 위해 지속적으로 연구, 개발하여 앞으로도 편리하고 즐거운 여행의 파트너가
+                            되겠습니다</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -203,13 +212,21 @@
             <div class="swiper swcategory">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="#" class="category-link clink-1">내용</a>
+                        <a href="#" class="category-link clink-1"><span class="font-size-mid">도시락멤버스</span>
+                        <p>하나의 ID로 도시락통의 모든 서비스를
+                            <br>이용할 수 있는 통합멤버십.
+                            <br>
+                            이용 할 수록 커지는 혜택을 확인해보세요!
+                        </p></a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="category-link clink-2">내용</a>
+                        <a href="#" class="category-link clink-2"><span class="font-size-mid">도시락톡</span><p>로밍전화 요금 부담을 확 낮춰주는 <br>해외로밍전화 앱 서비스.<br>도시락톡끼리는 365일 무료통화 혜택까지!</p></a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="category-link clink-3">내용</a>
+                        <a href="#" class="category-link clink-3"><span class="font-size-mid">여행보험도시락</span><p>방문국가,나이 입력하고 보험료 미리보기
+                            <br>커피 두 세잔 값으로 보험료는 가볍게,
+                            <br>보장은 든든하게!
+                        </p></a>
                     </div>
                 </div>
             </div>
