index.html ->  tree changed

--- a/dosiraktong/Main/index.html
+++ b/dosiraktong/Main/index.html
@@ -34,8 +34,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- aos -->
-    <link rel="stylesheet" href="css/aos.css">
-    <script src="js/aos.js"></script>
+    <link rel="stylesheet" href="../css/aos.css">
+    <script src="../js/aos.js"></script>
     <!-- Swiper -->
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -46,9 +46,9 @@
 
 
     <!-- css -->
-    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css">
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- js -->
     <!-- HTML5 태그 지원 -->
     <!--[if lt IE 9]>
@@ -56,11 +56,11 @@
     <![endif]-->
 
     <!-- CSS3 지원 -->
-    <script src="js/prefixfree.min.js"></script>
+    <script src="../js/prefixfree.min.js"></script>
     <!-- Viewport 지원 -->
-    <script src="js/respond.min.js"></script>
+    <script src="../js/respond.min.js"></script>
     <!-- 사용자 스크립트 -->
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 
 
 </head>
@@ -232,7 +232,7 @@
             </div>
             <!-- 안내창 -->
             <div class="category-pop">
-                <img src="images/scroll_guide2.png" alt="카테고리">
+                <img src="../images/scroll_guide2.png" alt="카테고리">
             </div>
         </section>
         <!-- 서비스 카테고리 끝-->
